# organ-fight

./: .gitignore  CMakeLists.txt  README.md  ToDo  unitTests.cpp
libTests/: CMakeLists.txt  boss.cpp  boss.h  movingObject.cpp  movingObject.h  note.cpp  note.h  partition_test.json  tests.cpp
mainLauncher/: CMakeLists.txt
resources/: LionKing.json  partition_test.json
src/: CMakeLists.txt  Movingobject.cpp  Movingobject.h  Tunes.cpp  Tunes.h  boss.cpp  boss.h  character.cpp  character.h  jsonfunction.cpp  jsonfunction.h  keyHandler.cpp  movingObject.cpp  movingObject.h  myMain.cpp  note.cpp  note.h  queue.cpp  queue.h  soundManager.cpp  soundManager.h  strategies.cpp  strategies.h  tunes.cpp  tunes.h
